[package]
name = "janet-world-wasm"
description = "Janet World Engine – WebAssembly browser client"
version = "0.1.0"
edition = "2021"

# This crate is NOT a member of the main janet workspace — it targets
# wasm32-unknown-unknown and is built separately with wasm-pack.

[lib]
crate-type = ["cdylib", "rlib"]

# `rlib` allows `cargo test` in native mode for unit-testing protocol logic
# without a browser.

[features]
# When set, skips the web-sys WebSocket impl and uses a stub — useful for
# doctests and protocol unit tests on the host.
native-test = []

[dependencies]
# -------------------------------------------------------------------
# WASM / JS bindings
# -------------------------------------------------------------------
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Performance",
    "Window",
    "console",
] }

# -------------------------------------------------------------------
# Serialisation
# -------------------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -------------------------------------------------------------------
# Async utilities (alloc-only — no std threads in WASM)
# -------------------------------------------------------------------
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# -------------------------------------------------------------------
# Logging
# -------------------------------------------------------------------
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# -------------------------------------------------------------------
# Owned closures / weak references for callback storage
# -------------------------------------------------------------------
once_cell = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Minimise binary size — important for initial page load.
opt-level = "z"
lto = true

# Keep this crate independent of the root janet workspace.
[workspace]
